# agentic-prd-generation

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: dependencies.py  logging.py  main.py  models.py  runtime.py  settings.py
backend/agents/: base_adapter.py  vanilla.py
backend/pipelines/: pipeline_runner.py  prompts.py
backend/routes/: generation.py  health.py
backend/services/: streamer.py
backend/state/: base.py  in_memory_store.py  redis_store.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: PRD.md  TECH_SPEC.md
frontend/: app.py
tests/: conftest.py
tests/integration/: test_streaming.py
tests/unit/: test_cli.py  test_frontend.py  test_generation.py  test_health.py  test_pipeline.py  test_runtime.py  test_streamer.py
